<package format="2">
   <name>social_vrnn</name>
   <version>1.0.0</version>

   <author email="J.vanderToorn@student.tudelft.nl">Jules van der Toorn</author>
   <maintainer email="J.vanderToorn@student.tudelft.nl">Jules van der Toorn</maintainer>
   <description>ROS interface to the Social-VRNN roboat prediction network.</description>
   <license>MIT</license>

   <buildtool_depend>catkin</buildtool_depend>
   <depend>rospy</depend>
   <depend>nav_msgs</depend>
</package>